[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Lobby.gd" type="Script" id=1]
[ext_resource path="res://Fonts/pixeled_font.tres" type="DynamicFont" id=2]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 800.0
margin_bottom = 800.0
rect_pivot_offset = Vector2( 334.391, 182.04 )

[node name="Lobby" type="Label" parent="Panel"]
margin_left = 200.0
margin_top = 40.0
margin_right = 580.0
margin_bottom = 140.0
custom_fonts/font = ExtResource( 2 )
text = "LOBBY"
align = 1
valign = 1

[node name="Player1" type="Label" parent="Panel"]
margin_left = 50.0
margin_top = 160.0
margin_right = 430.0
margin_bottom = 260.0
custom_fonts/font = ExtResource( 2 )
text = "PLAYER 1"
align = 1
valign = 1

[node name="Player2" type="Label" parent="Panel"]
margin_left = 50.0
margin_top = 280.0
margin_right = 430.0
margin_bottom = 380.0
custom_fonts/font = ExtResource( 2 )
text = "PLAYER 2"
align = 1
valign = 1

[node name="Player3" type="Label" parent="Panel"]
margin_left = 40.0
margin_top = 410.0
margin_right = 420.0
margin_bottom = 510.0
custom_fonts/font = ExtResource( 2 )
text = "PLAYER 3"
align = 1
valign = 1

[node name="Player4" type="Label" parent="Panel"]
margin_left = 40.0
margin_top = 540.0
margin_right = 420.0
margin_bottom = 640.0
custom_fonts/font = ExtResource( 2 )
text = "PLAYER 4"
align = 1
valign = 1

[node name="Player1Status" type="Label" parent="Panel"]
margin_left = 380.0
margin_top = 160.0
margin_right = 760.0
margin_bottom = 260.0
custom_fonts/font = ExtResource( 2 )
text = "WAITING..."
align = 1
valign = 1

[node name="Player2Status" type="Label" parent="Panel"]
margin_left = 380.0
margin_top = 280.0
margin_right = 760.0
margin_bottom = 380.0
custom_fonts/font = ExtResource( 2 )
text = "WAITING..."
align = 1
valign = 1

[node name="Player3Status" type="Label" parent="Panel"]
margin_left = 370.0
margin_top = 410.0
margin_right = 750.0
margin_bottom = 510.0
custom_fonts/font = ExtResource( 2 )
text = "WAITING..."
align = 1
valign = 1

[node name="Player4Status" type="Label" parent="Panel"]
margin_left = 370.0
margin_top = 540.0
margin_right = 750.0
margin_bottom = 640.0
custom_fonts/font = ExtResource( 2 )
text = "WAITING..."
align = 1
valign = 1

[node name="Button" type="Button" parent="Panel"]
visible = false
margin_left = 250.0
margin_top = 670.0
margin_right = 520.0
margin_bottom = 740.0
custom_fonts/font = ExtResource( 2 )
text = "START"

